@@ -1,4 +1,4 @@
-List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.23:
+List of PostScript Printer Description files (PPDs) in epson-inkjet-printer-escpr2-1.2.24:
 
 Epson EC-4020 Series
 Epson EC-4030 Series
@@ -153,6 +153,8 @@ Epson PX-M7110F
 Epson PX-M7110FP
 Epson PX-M7120F
 Epson PX-M7120FP
+Epson PX-M8000FX
+Epson PX-M8010FX
 Epson PX-S161T Series
 Epson PX-S270T Series
 Epson PX-S380
@@ -175,6 +177,7 @@ Epson PX-S7110
 Epson PX-S7110P
 Epson PX-S7120
 Epson PX-S7120P
+Epson PX-S8010X
 Epson ST-3000 Series
 Epson ST-4000 Series
 Epson ST-C4100 Series
