@@ -1,8 +1,8 @@
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.i486.rpm 3696192 BLAKE2B 47600186c0d2c4291c5c729be5e9020efb527f765bccbbfa5b4b2e7ca972faf1a79e4c4fdbc9e6b1200e8d4945a187a28f70a9eb927d0b1a769015462124a634 SHA512 464a8de063e092092f464478c3167b8f18792e2a0cda22e970fbbd910eb4417d880c84730cfcc8ec1b4c24f214bd26fcaa13d296258394083a43d497fa753138
 DIST epson-inkjet-printer-escpr2-1.1.62-1lsb3.2.x86_64.rpm 3695594 BLAKE2B ef23b41c05104d488c2d67bf5a95523b496d548be91b826cf7a709bd370ae6c8156421fe89480fead743a99576c0c3aa70a129dccfa5173934adacb05dd5d7bb SHA512 2f0664e798166fd09e3da12328e02e8e9e51cac3ea3e941e293803dfa7e80e3b4523369373d8e0b917082c545374a6d1fbe88ae45ad7f18a94abc2a78a331218
-DIST epson-inkjet-printer-escpr2-1.2.22-1.x86_64.rpm 4528311 BLAKE2B 2a03450d06ea36288a9ed5e4130da954e267eee559df281e8463079df4031556dafb6c518415428b70fbc04e95814ef7d5221e4be9bf4a73ce01fc35c826f2e8 SHA512 0d8f0b9e89f020c55264072a1e98cfb5cda6c5471525602faa66d1b154b29515612a630c094098f23f0fa2b76238ffb1914bc385f4d78bdd79352286e67aac2d
 DIST epson-inkjet-printer-escpr2-1.2.23-1.x86_64.rpm 4572467 BLAKE2B 6f55441040c25e751e2013375a079a25e812c82eb5a296956f0afbac1dd1b12d3037d6174db65ef400e8cbf8f5f434413b4b74040c8a50a59a9df8fadaf46947 SHA512 ccbcf8e78914474f7824d44fbcfdfe88361a58a1213e26034ef0b20f25e4854048c7c95b63214898b5d54378f2fe0de6d40ac40f5f1c70649cb4b3c09a5d8836
+DIST epson-inkjet-printer-escpr2-1.2.24-1.x86_64.rpm 4642022 BLAKE2B 16fcc621158840d6fd239509e1c41dad5d871677b21671ce461e3c0507b61988f73e81ada2181512665108a6add15fa2cc2623e4532410e659b0dee40ac5901c SHA512 e671d0e64d12b02b648c3458520ff015914972aa6e9cf95be9b8a12389c77d3372265713245de5dd11932e7cfa78f7c2812d3bf541d31ae7bca22aec8c1abc9a
 EBUILD epson-inkjet-printer-escpr2-bin-1.1.62.ebuild 1843 BLAKE2B bbe1b11046a92a16e9d0e76298620cb1b288d60569a89f705f37bd20b502dc9d54661e021bfae25075397f06db7c73f2245e7860d72533b1b96d43615a05e13e SHA512 3a0c9d2fabee1b1d0d87f7a794732539dd3c5685e16a9e32ea101c65f84016029e59e4dd7005c57d1bf3dc7195527bd99b3e0c8ce2ae13047659f7ba25a2b53c
-EBUILD epson-inkjet-printer-escpr2-bin-1.2.22.ebuild 1460 BLAKE2B 2e53c5189a47e09e6680a6cf1dfe1a89f815979abe4adfaf0363c418a52f608a804ecc0392380b7ab2de426d901bb24ca3be3d50d5ba8218a59b324e24a49665 SHA512 766786bf7ab17fc7515ef28cb810810476e109416a558f5537fca36109ad93022c9097d2f2fab458d276e01cd6b255fd65a023b73dd8c6255761833694d7f933
 EBUILD epson-inkjet-printer-escpr2-bin-1.2.23.ebuild 1460 BLAKE2B d7b5eac0ab9e2bad132865f27b642d86ce3ace16434299cae6728ecf049738889ae060074849cc6a7c7ef8d4f71c36ad533fad214a791263c0820cf2ad080e61 SHA512 0a6489af4fc49970475618a40347c1096668132b9d27df70cdf0708b21a8dd330ed6424d2241b09a431be0ac3625aab9225a181e37a18bfd544898df3fb175cc
+EBUILD epson-inkjet-printer-escpr2-bin-1.2.24.ebuild 1460 BLAKE2B cd0764c27814e77364f1191d72762a2117eb9844f18cb1a1903959451649c22b7653df8b955b93d7626ba4d8dcb4553628677844082d08889026eaeba734d730 SHA512 2b68e3611e1a458cad4ea124610cbb94ceaeeaae96c9ee84d63c8a505756fe20c84950666f4d8147ab1740824c37690cbf70ecbcac2964cd29edb3041661d791
 MISC metadata.xml 754 BLAKE2B 8c7bf6fb2c07b1340ad2a2777faeefabaa07cc7d4637029265eccaf4613695772267da3a2a729f3a05fef7228f1c54840de30fb9914a996765637d505dfa776e SHA512 e6905e32c6a4e8cbe2e5e9a609c77176ccd4669fd08c4f2cb6eb9f272c10a68dc6355703f605d8229787e9b939790f562493661eeba78c48b707b203f55e256e
