@@ -1,9 +1,9 @@
 AUX gcc-no-implicit-function-declaration-1.1.15.patch 2428 BLAKE2B 2a6b8f6b9cba9694a5ff1909f5454ab6c3a3e19ef7706aa3f245991c2945b1ffe2f2a792fa85d14e2dd8cd5181eca9eed1b171c891f14c84d04b88cdfb8c097f SHA512 55cafa67de12daa9730e2aca3887b049dd52dd093e9f1609ea656165a67cd30bc1fc2b043c675f778a52e9e3fddce751f1b3533e31b7e6fbbbeede1cc25726ac
 AUX gcc-no-implicit-function-declaration-1.2.10.patch 2421 BLAKE2B 158c074ec7d37ee1a09b29bbee21c29da0ff2784fe25b22f64d2b199b07a8d8c90ca92477f7c284ded194c1a66bee219943b7c827bf7fb1b58227b3e7caedc3b SHA512 55533abc7b4f4cfa6c95868726721e59d187601722c0b2daa38d913f15ce9c695ae4c900274c46a770cfcdf85c46f77c724b936686a70bae34be5660c41a34aa
 DIST epson-inkjet-printer-escpr2-1.1.62.tar.gz 5101117 BLAKE2B 8bea8fa19ba56d008b1dce174367473287c386bcffbc2df2397f4d9aa396ca9ba447b2719d132e7dd7d800e51b685f6397bb30ed2eac1da813fe456fffa5723a SHA512 648006b9f7b14a5fd7ed31516d420c463383b99a8bbc693a2378128d4e4729290ba2deabfeb8526009c223f8e84d5565b4aba80b5478c6c4865ba9e84948b9b0
-DIST epson-inkjet-printer-escpr2-1.2.22-1.tar.gz 6024510 BLAKE2B 474956724eb69becc045dd6f16a47ec4bf3a7632e6f34c9b70732acfdb584fb0ff485a59251716146cab89c08919da40613b466cf4cb6ef3740d0c138200c643 SHA512 e85354c760827826be0e6522d2b77d014caaff34ef0600b035794e9388b2b599e44923947fd8b9d8efdf66aab98f85a610f46fa216457d446056f02d5613df80
 DIST epson-inkjet-printer-escpr2-1.2.23-1.tar.gz 6058534 BLAKE2B c67e61392bda34796e7c994ba783536ff94e5bd777720a2d05be1e6e81aa3bc38c29f314ace95512cf662b7dc623dc1db5405084a0dc67dc044a9ea97f83d9b0 SHA512 b186bd3f9801d3961c3343d3d92c3d327de7f5654d276c0879cebbcfed01200f1508c22d2f659badbc9473981bc1c6cb6979840379057eac279361a7ab6354fe
+DIST epson-inkjet-printer-escpr2-1.2.24-1.tar.gz 6125749 BLAKE2B 5b996c037b7341507e484a6da3fa9fec42954c7f298a9dbf60d5f34829ea7185c78ca965cf7b09a49fe7c6f937908fe94ea9b5092f6714eb04c2e4f6c2461a16 SHA512 341ce9ae8bcc165774297c4971e92b629a4d2266edcafecc6bdd70c463af6ecfe92207002bb56a5515ec0a2ab939a54e1118fbec6c0d6b85aa2f7744263d5d81
 EBUILD epson-inkjet-printer-escpr2-1.1.62.ebuild 1526 BLAKE2B a7d8e558a18c211faf4c971074e88daf7c25b6b0c4ec0a9e5a4ef3657527fd3fa11c21a8aa7db42f419eeb1d45780635433d3e9efc8bd8dbc4b50420bc199443 SHA512 ce66e10bbff3de69007c0edf784c88578f2fcec6b9b81b745eb59541fba73dd43749abd35f58e3e4e13bd7d0a5f2196705a7438123d30af39d66cf1daa48ed64
-EBUILD epson-inkjet-printer-escpr2-1.2.22.ebuild 1898 BLAKE2B ebfb2d0887d7ab4ea1b4a731e55f00edd3dce72cda8e275f79560d43661894e628545ccbca897c585ecad153ba146a924b841e683f200fb1ccf736ec0067fcca SHA512 f68d23852d68aa8efb4c68aa96049be3d623fec7a6cc945ea2110638ac034c4114cd5f371ae9f02b0af76badaccf2efa7d22c05755aaf806450688b48d544f35
 EBUILD epson-inkjet-printer-escpr2-1.2.23.ebuild 1898 BLAKE2B e9b951843ba9c9eca2f17811fee299d1889c421756f3c6a6f860af7f387680c576cca7a0f3e8b78ba09219d4315694102138d5d3d1ed908f0ada91440ff7c7e7 SHA512 10e17ab8d88c113909815230b6d70c20ceb206b83d81a083ea5d89f53ab6486f4d3d5f16c4ef5314e3139e42dda425c6b66633352b72c39dde1f60eda8c385dc
+EBUILD epson-inkjet-printer-escpr2-1.2.24.ebuild 1898 BLAKE2B db0204a645f7fcf5bf33360687e84dddd23d15dbf4131905a264b5fc03a7c8dcace5f3c063bf44e2d7e5baa744dccfd39dfa2f20655318989c41a15bac07801b SHA512 32a4d17f67fe81b97c9f8b1e23c310b424f6d8f83814c8e85e2df0b6336a1ca50e3a418ac1b84689e11d7e241acedbe068e88839a266ae0c9cede432bc1ad080
 MISC metadata.xml 775 BLAKE2B 4877278409048049f2b34c2f8603b0845bfbabdb5823b4ae6ab9559cfa64690a059e8d8b2d78990d443464e3604a7c50a1ea210f324cdd4beb7c103e25250f7c SHA512 76daff7f5cab31c3372e9e764497870ee78f1a22ff44225b943fe7f0e7545b56ad7a0cf4544213089d855e6f478facbfc40d43dfdc78abfa11315e6a03d83ac1
