@@ -4,7 +4,7 @@
 EAPI=8
 inherit autotools
 
-DSC_F="dsc/f/03/00/16/55/15/0aa0a184d4295a0c7f5a0a1f913f0aeab41503c5"
+DSC_F="dsc/f/03/00/16/58/59/38ceb34cda1d8e34f270e860a2f77dc22a16783b"
 MY_PV="${PV}-1"
 
 DESCRIPTION="Epson ESC/P-R 2 generic Inkjet Printer Driver"
